--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "nextjs-serverless",
-  "version": "1.0.0",
+  "name": "moocodingapi-nextjs-serverless",
+  "version": "0.0.1",
   "description": "Simple setup to deploy nextjs with express to lambda",
   "main": "index.js",
-  "repository": "https://github.com/belongco/nextjs-serverless-setup.git",
+  "repository": "https://github.com/Means-Business/mb-nextjs-serverless",
   "contributors": [
     {
-      "name": "Vivek Kaarthek",
-      "email": "kaarthek@belong.co"
-    },
-    {
-      "name": "Phani Kumar",
-      "email": "phani@belong.co"
+      "name": "Manot Luijiu",
+      "email": "manot.luijiu@gmail.com"
     }
   ],
   "license": "MIT",
@@ -21,28 +17,29 @@
     "dev": "ENV_FILE=.env.local NODE_ENV=development node server.js"
   },
   "dependencies": {
-    "@zeit/next-sass": "^0.2.0",
+    "@zeit/next-sass": "^1.0.1",
     "aws-serverless-express": "^3.2.0",
-    "dotenv": "^5.0.1",
-    "dynamoose": "^0.8.7",
+    "dotenv": "^6.2.0",
+    "dynamoose": "^1.3.1",
     "express": "^4.16.3",
-    "next": "5.1.0",
+    "next": "latest",
     "node-sass": "^4.9.0",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "latest",
+    "react-dom": "latest",
     "serverless-apigw-binary": "^0.4.4",
-    "serverless-apigwy-binary": "^0.1.0",
+    "serverless-apigwy-binary": "^1.0.0",
     "serverless-domain-manager": "^2.4.0",
     "serverless-http": "^1.5.5"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
-    "serverless": "1.27.3"
+    "serverless": "1.36.0",
+    "serverless-offline": "^3.32.2"
   }
 }
