--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "lint": "eslint --fix pages/",
     "build": "next build",
-    "dev": "ENV_FILE=.env.local NODE_ENV=development node server.js"
+    "dev": "cross-env ENV_FILE=.env.local NODE_ENV=development node server.js"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
@@ -23,7 +23,7 @@
     "dynamoose": "^1.3.1",
     "express": "^4.16.3",
     "next": "latest",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.11.0",
     "prop-types": "^15.6.1",
     "react": "latest",
     "react-dom": "latest",
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "cross-env": "^5.2.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.12.0",
